--- a/views/account.ejs
+++ b/views/account.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <title>
-       Chupamelapija
+       Titulo! Direct Upload AWS-SDK
     </title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
 </head>
